--- a/0522.ipynb
+++ b/0522.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRjC4+A3kopduG12hK2DPC",
+      "authorship_tag": "ABX9TyNkPsnkdiCH5XE86Qdncc/n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Rd-1ENgWiJdi",
-        "outputId": "c1ab2753-94d5-4a00-ee5b-387862c266c4"
+        "id": "V1nUgRflGZqC",
+        "outputId": "a679c622-4dd8-4bd9-94b7-d9cf2add87e4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0522\n"
+            " 0522 \n"
           ]
         }
       ],
       "source": [
-        "print(\"0522\")"
+        "print ( \" 0522 \" ) "
       ]
     },
     {
@@ -55,30 +55,261 @@
         "list1 = range(1, 5)"
       ],
       "metadata": {
-        "id": "KNV4N5phqrQ2"
+        "id": "KTZJbe6cGigO"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "list1"
+        "list (list1)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "cGdJdUEtqsVk",
-        "outputId": "de04a9dc-c584-4b65-cfd5-1272477ec44d"
+        "id": "lAVzkHeJGrTR",
+        "outputId": "2705d0e3-796f-4e40-b0d2-2db33c7eb0f2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "range(1, 5)"
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list2 = range(3, 8)"
+      ],
+      "metadata": {
+        "id": "kUCKKuslGt8h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6-A_pBS6La-c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list (list2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wX5q-JZUG1RA",
+        "outputId": "f6c7f14c-c1cd-4ee7-8bf1-279451640fe8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 4, 5, 6, 7]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list3 = range(-2, 4)"
+      ],
+      "metadata": {
+        "id": "conu6NKOG5RW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list (list3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LRGs1qwxKBIb",
+        "outputId": "1de80c8d-b84f-4945-d7a9-1c66ffbc1391"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-2, -1, 0, 1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list4 = range(6)"
+      ],
+      "metadata": {
+        "id": "XX-o28MDKsEj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(list4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ZT44ihKK1Fa",
+        "outputId": "9f941014-2bbf-4ebd-8db8-3b7491a5d3bd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list5 = range(8)"
+      ],
+      "metadata": {
+        "id": "sB00Kz_6K2iu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list (list5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rX5Zci6CK9hc",
+        "outputId": "efc0650c-6cee-4bde-82bc-ecdeb3267c48"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list6 = range(8,3,-2)"
+      ],
+      "metadata": {
+        "id": "qmqyoKdoK_Q-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(list6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_5hNy2Q5LZpC",
+        "outputId": "5db5c209-3a17-4947-e75c-0c73dac0d7a4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[8, 6, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list8 =range(3,9,2)"
+      ],
+      "metadata": {
+        "id": "UsIqvpg3LfdN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(list8)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HnR2DiNzLzhg",
+        "outputId": "a94192ed-4416-4aff-8932-843c591d3d5e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 5, 7]"
             ]
           },
           "metadata": {},
@@ -89,39 +320,193 @@
     {
       "cell_type": "code",
       "source": [
-        "list(list1)"
+        "list9 = range(9,3,-2)"
+      ],
+      "metadata": {
+        "id": "0bYwDiz1L0rY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(list9)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 167
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "_Xkg97vEqu86",
-        "outputId": "ffa5030a-9ef8-47ec-a502-fb961978b8d9"
+        "id": "sHIoZznLL6hi",
+        "outputId": "9b1c9aab-0daf-463b-af6d-ea23922a2bfe"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-23-7548f6305a1a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9, 7, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list10 = range(10,3,-1)"
+      ],
+      "metadata": {
+        "id": "wb8ZzM7TL7n5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(list10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NnpfZuCJL_4i",
+        "outputId": "bfbfe5dc-3248-409a-866f-8356e91737b1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[10, 9, 8, 7, 6, 5, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list11 = range(0,9,1)"
+      ],
+      "metadata": {
+        "id": "ItpYwuENMA7U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(list11)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z6F2peShMXs3",
+        "outputId": "2db72657-d746-45cb-9236-9ea605d69c3d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for n in range(3):\n",
+        "  print(n, end=\",\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lWZOz7f0MYok",
+        "outputId": "a662274e-9692-47b7-bb18-95bfabadf2d6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0,1,2,"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "num = int(input(\"請輸入一個正整數\"))\n",
+        "for n in range(num):\n",
+        "  print(n+1, end=\",\")\n",
+        "sum=0\n",
+        "for n in range(num):\n",
+        "  sum= sum+n+1\n",
+        "print(sum)\n"
+      ],
       "metadata": {
-        "id": "vnxAgj_CqxNw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N6_k2eJBMzlH",
+        "outputId": "7d3fc429-f2f6-4539-ec8a-9cce19ff8390"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入一個正整數10\n",
+            "1,2,3,4,5,6,7,8,9,10,55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "for n in range(3):\n",
+        "  sum=sum+n\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KM3XrMEQOIld",
+        "outputId": "95b2afdb-972c-4e31-dafe-f5f005e33ece"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
     }
   ]
 }
