--- a/0522.ipynb
+++ b/0522.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkPsnkdiCH5XE86Qdncc/n",
+      "authorship_tag": "ABX9TyNhBzNf+IgWEzqFigIAKwJq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -507,6 +507,45 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num= int(input(\"請輸入一個正整數：\"))\n",
+        "for n in range(num):\n",
+        "  print(n+1, end=\",\")\n",
+        "sum=0\n",
+        "for n in range(num+1):\n",
+        "  sum= sum+n\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7sspRFTTKcAg",
+        "outputId": "590dbcbf-1fa3-4e69-c335-22cd89a35a96"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入一個正整數：10\n",
+            "1,2,3,4,5,6,7,8,9,10,55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nbZjG9C3KsJI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
